# Image-resize-API

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: constants.py  db.py  image_utils.py  response_models.py  settings.py  urls.py
tests/: conftest.py  test_urls.py
